--- a/app/src/main/res/layout/activity_routine.xml
+++ b/app/src/main/res/layout/activity_routine.xml
@@ -25,13 +25,16 @@
 
     <android.support.v7.widget.GridLayout
         android:id="@+id/layoutGrid"
-        android:layout_width="437dp"
+        android:layout_width="0dp"
         android:layout_height="274dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -40,7 +43,9 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="a"
+            android:padding="2dp"
+            android:text="Day \ Time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
             app:layout_row="0" />
 
@@ -48,7 +53,9 @@
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="b"
+            android:padding="2dp"
+            android:text="Monday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
             app:layout_row="1" />
 
@@ -56,7 +63,9 @@
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="c"
+            android:padding="2dp"
+            android:text="Tuesday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
             app:layout_row="2" />
 
@@ -64,7 +73,9 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="d"
+            android:padding="2dp"
+            android:text="Wednesday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
             app:layout_row="3" />
 
@@ -72,7 +83,9 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="e"
+            android:padding="2dp"
+            android:text="Thursday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
             app:layout_row="4" />
 
@@ -80,23 +93,29 @@
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="f"
+            android:padding="2dp"
+            android:text="Friday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
             app:layout_row="5" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="a"
+            android:padding="2dp"
+            android:text="Saturday"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="0"
-            app:layout_row="0" />
+            app:layout_row="6" />
 
         <TextView
             android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="b"
+            android:padding="2dp"
+            android:text="8:00"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="1"
             app:layout_row="0" />
 
@@ -104,7 +123,9 @@
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="c"
+            android:padding="2dp"
+            android:text="9:15"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="2"
             app:layout_row="0" />
 
@@ -112,7 +133,9 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="d"
+            android:padding="2dp"
+            android:text="10:45"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="3"
             app:layout_row="0" />
 
@@ -120,7 +143,9 @@
             android:id="@+id/textView17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="e"
+            android:padding="2dp"
+            android:text="12:00"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="4"
             app:layout_row="0" />
 
@@ -128,7 +153,9 @@
             android:id="@+id/textView19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="f"
+            android:padding="2dp"
+            android:text="2:00"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             app:layout_column="5"
             app:layout_row="0" />
     </android.support.v7.widget.GridLayout>
